# DJANGO_2610_LESSONS

./: .gitignore  Dockerfile  commands  docker-compose.yml  pre-commit  pyproject.toml  run_local.sh  set-pre-commit.sh
classroom/: manage.py
classroom/classroom/: last-update.txt  settings.py  urls.py  wsgi.py
classroom/classroom/settings/: _base.py  dev.py  production.py
classroom/core/: forms.py  last-update.txt  managers.py  middleware.py  models.py  urls.py  utils.py  versioning.py  views.py  widgets.py
classroom/core/migrations/: 0001_initial.py  0002_initial.py  0002_rename_profile_student.py  0003_user_photo.py  0004_alter_user_photo.py
classroom/courses/: consts.py  forms.py  managers.py  mixins.py  models.py  services.py  urls.py  validators.py  views.py
classroom/courses/migrations/: 0001_initial.py  0002_course_author_course_users.py  0002_course_description.py  0003_alter_course_author.py  0009_comment.py  (+9 more)
classroom/directory/: models.py
classroom/homeworks/: admin.py  apps.py  models.py  urls.py  views.py
classroom/roadmaps/: forms.py  mixins.py  models.py  urls.py  views.py
classroom/static/: content.css  login.css  navbar.css  sidebar.css  style.css
classroom/templates/: base.html  comment.html  sidebar.html
classroom/user_role/: apps.py  backends.py  models.py  views.py
classroom/users/: forms.py  models.py  urls.py  views.py
my_image/: docker-compose.yml  main.py  run_container_db.sh
my_nginx/: index.html
nginx_conf/: local.conf
samplesite/animals/: models.py  urls.py  views.py
samplesite/samplesite/: settings.py  urls.py
(+49 files in other folders)
