[tool.poetry]
name = "django-2610-lessons"
version = "0.1.0"
description = ""
authors = ["Dzmitry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"
django-bootstrap-v5 = "^1.0.11"
django-flatpickr = "^2.0.0"
django-role = "^0.1.6"
pillow = "^9.4.0"
django-debug-toolbar = "^3.8.1"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
